[Add] ゼミ用、授業用テンプレート追加

--- a/Tex/Template_Report.tex
+++ b/Tex/Template_Report.tex
@@ -1,6 +1,6 @@
 %\documentstyle[epsf,twocolumn]{jarticle}       %LaTeX2.09仕様
 %\documentclass[twocolumn]{jarticle}     %pLaTeX2e仕様
-\documentclass[twocolumn]{jarticle}     %pLaTeX2e仕様
+\documentclass{jarticle}     %pLaTeX2e仕様
 
 %一枚組だったら[twocolumn]関係のとこ消す
 
@@ -16,33 +16,41 @@
 
 \kanjiskip=.07zw plus.5pt minus.5pt
 
-\usepackage{graphicx}
-\usepackage[dvipdfmx]{color}
+\usepackage[dvipdfm]{graphicx}
+\usepackage{ccaption}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \usepackage{subcaption}
 \usepackage{enumerate}
 \usepackage{comment}
 \usepackage{url}
 \usepackage{multirow}
 \usepackage{diagbox}
+\usepackage{amssymb}
+\usepackage{mathtools}
+\usepackage{wrapfig}
+\usepackage{graphicx}
+\usepackage{float}
+\usepackage{amsmath}
+\usepackage{lipsum}
 
 
 \begin{document}
-\twocolumn[
   \noindent
   \hspace{1em}
 
-  \today
+  \today 
   \hfill
-  \ \  西村昭賢 
+  \ \  学籍番号:BGA23130  氏名:西村昭賢 
 
   \vspace{2mm}
   \hrule
   \begin{center}
-  {\Large \bf タイトル}
+  {\Large \bf レポートタイトル}
   \end{center}
   \hrule
   \vspace{3mm}
-]
+
 
 \section{??????}
 ?????
